--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/sanchezzzhak/node-device-detector#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "node-device-detector": "^2.2.0"
   },
